--- a/SatelliteTec/SatelliteTec/Views/Manage/Index.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Manage/Index.cshtml
@@ -1,17 +1,28 @@
-﻿@model SatelliteTec.Models.IndexViewModel
+﻿
 @{
-    ViewBag.Title = "Administrar";
+    Layout = null;
+
 }
 
-<h2>@ViewBag.Title.</h2>
 
+
+
+
+
+
+<!--
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <h4>Cambiar la configuración de la cuenta</h4>
     <hr />
+
+
+
+
     <dl class="dl-horizontal">
         <dt>Contraseña:</dt>
         <dd>
+    @*
             [
             @if (Model.HasPassword)
             {
@@ -29,33 +40,37 @@
             @Html.ActionLink("Administrar", "ManageLogins") ]
         </dd>
         @*
-            Los números de teléfono se pueden usar como una segunda fase de comprobación en un sistema de autenticación en dos fases.
-             
-             Consulte <a href="https://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
-                para obtener detalles sobre cómo configurar esta aplicación ASP.NET para que sea compatible con la autenticación en dos fases mediante SMS.
-             
-             Quite la marca de comentario del bloque siguiente después de configurar la autenticación en dos fases
+        Los números de teléfono se pueden usar como una segunda fase de comprobación en un sistema de autenticación en dos fases.
+
+         Consulte <a href="https://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
+            para obtener detalles sobre cómo configurar esta aplicación ASP.NET para que sea compatible con la autenticación en dos fases mediante SMS.
+
+         Quite la marca de comentario del bloque siguiente después de configurar la autenticación en dos fases
         *@
-        @*  
-            <dt>Número de teléfono:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
+        @*
+        <dt>Número de teléfono:</dt>
+        <dd>
+            @(Model.PhoneNumber ?? "None")
+            @if (Model.PhoneNumber != null)
+            {
+                <br />
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Quitar" class="btn-link" />]</text>
-                    }
+                    @Html.AntiForgeryToken()
+                    <text>[<input type="submit" value="Quitar" class="btn-link" />]</text>
                 }
-                else
-                {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-                }
-            </dd>
+            }
+            else
+            {
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+            }
+        </dd>
         *@
+
+
+
+
         <dt>Autenticación de dos factores:</dt>
         <dd>
             <p>
@@ -63,25 +78,130 @@
                 para obtener detalles sobre cómo configurar esta aplicación ASP.NET para que sea compatible con la autenticación en dos fases.
             </p>
             @*@if (Model.TwoFactor)
+            {
+                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Habilitado
-                        <input type="submit" value="Deshabilitar" class="btn btn-link" />
-                        </text>
-                    }
+                    @Html.AntiForgeryToken()
+                    <text>Habilitado
+                    <input type="submit" value="Deshabilitar" class="btn btn-link" />
+                    </text>
                 }
-                else
+            }
+            else
+            {
+                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Deshabilitada
-                        <input type="submit" value="Habilitar" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
+                    @Html.AntiForgeryToken()
+                    <text>Deshabilitada
+                    <input type="submit" value="Habilitar" class="btn btn-link" />
+                    </text>
+                }
+            }*@
         </dd>
     </dl>
 </div>
+
+
+    -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    @Styles.Render("~/Content/css")
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    @Scripts.Render("~/bundles/modernizr")
+
+</head>
+<body>
+
+
+    <nav class="navbar  navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="@Url.Action("Login","Account")">Satelites Tec</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="@Url.Action("Login","Account")">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Contact","Home")">Contacto</a>
+                </li>
+
+            </ul>
+
+            @Html.Partial("_LoginPartial")
+
+        </div>
+    </nav>
+
+
+
+
+
+
+
+
+
+    <div class="card text-center">
+        <div class="card-header">
+            Featured
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+
+            <div class="container">
+                <div class="row row-cols-3" style="padding: 10px">
+                    <div class="col" style="padding: 10px">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                    </div>
+                    <div class="col" style="padding: 10px">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                    </div>
+                    <div class="col" style="padding: 10px">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                    </div>
+                    <div class="col" style="padding: 10px">
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div>
+        <div class="card-footer text-muted" style="  ">
+            2 days ago
+        </div>
+    </div>
+
+
+
+ 
+
+
+
+</body>
+</html>
