--- a/SatelliteTec/SatelliteTec/Views/Shared/_Layout.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Shared/_Layout.cshtml
@@ -26,18 +26,36 @@
                 </li>
                 @if (User.IsInRole("Almacenist"))
                 {
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "Products")">Productos</a>
-                </li>}
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Products")">Productos</a>
+                    </li>
+                }
                 @if (User.IsInRole("Technical"))
                 {
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "")">Contacto</a>
-                </li>}
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Contact","Home")">Contacto</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("VisitAsigned", "Visits")">Visitas</a>
+                    </li>
+                }
+                @if (User.IsInRole("Supplier"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Suppliers")">Empresa</a>
+                    </li>
+                }
+                @if (User.IsInRole("Logistic"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Visits")">Visitas</a>
+                    </li>
 
+                }
+
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Register", "Account")">Registrar</a>
+                    </li>
+                }
 
             </ul>
  
